--- a/scss/new-age.scss
+++ b/scss/new-age.scss
@@ -65,6 +65,17 @@ section {
   section h2 {
     font-size: 50px; }
 
+#mlh-trust-badge {
+  display:block;
+  max-width:100px;
+  min-width:60px;
+  position:fixed;
+  right:50px;
+  top:0;
+  width:10%;
+  z-index:10000;
+}
+
 #mainNav {
   border-color: rgba(34, 34, 34, 0.05);
   background-color: white;
@@ -711,6 +722,9 @@ ul.hack-week-events {
   padding: 10px;
   text-align: left;
   font-size: 18px;
+  li {
+    padding: 5px;
+  }
 }
 
 .bg-primary {
@@ -798,9 +812,15 @@ ul.hack-week-events {
       text-transform: uppercase; 
       font-weight: 300; 
     }
+    #mlh-trust-badge {
+      right: 25%;
+    }
 }
 
 @media screen and (max-width: 769px) {
+    #hack-week-info {
+      padding: 15px;
+    }
     header.masthead {
       position: relative;
       width: 100%;
@@ -872,7 +892,7 @@ ul.hack-week-events {
     .schedule-event-right {
       display: inline-flex;
       column-count: 2;
-      width: 400px;
+      width: 330px;
       text-align: left;
       padding-left: 0;
     }
@@ -926,10 +946,6 @@ ul.hack-week-events {
     width: 40vw;
     height: 40vw;
     border-radius: 50%;
-  }
-
-  #mlh-badge {
-    margin-left: -35px;
   }
 
   .organizer-container {
